--- a/index.html
+++ b/index.html
@@ -2,8 +2,20 @@
 
 <html lang="pt-BR">
     <head>
-        <meta charset="UTF-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+        <!-- URL Project -->
+        <link rel="canonical" href="https://lucassantus.github.io/portfolio/beauty-salon/"/>
+
+        <!-- Description Project -->
+        <meta name="author" content="Lucas Eduardo de Oliveira Santos">
+        <meta name="description" content="Site construído para um salão especializado em tratamentos naturais.">
+
+        <!-- Import Favicon -->
+        <link rel="icon" type="image/x-icon" href="assets/images/logo.png">
+
 
         <!-- Icones -->
         <link rel="stylesheet" href="assets/fonts/style.css" />
