--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- URL Project -->
-        <link rel="canonical" href="https://lucassantus.github.io/portfolio/beauty-salon/"/>
+        <link rel="canonical" href="https://beauty-salon-ls.netlify.app/"/>
 
         <!-- Description Project -->
-        <meta name="author" content="Lucas Eduardo de Oliveira Santos">
+        <meta name="author" content="Lucas Santos">
         <meta name="description" content="Site construído para um salão especializado em tratamentos naturais.">
 
         <!-- Import Favicon -->
